numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@unsupported_const_eval_expr_function_call.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/unsupported_const_eval_expr_function_call.nbt
---
error: while type checking
  ┌─ <internal:3>:1:7
  │
1 │ meter^sqrt(4)
  │       ^^^^^^^ Unsupported expression in const-evaluation of exponent: function call.
